--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,34 @@
 @import "tailwindcss";
+
+html,
+body {
+  margin: 0;
+  width: 100%;
+}
+
+body {
+  position: relative;
+  font-family: system-ui, sans-serif;
+  background-color: black;
+}
+
+#masked-overlay rect {
+  mask: url(#mask);
+  fill: rgb(252, 252, 252);
+}
+
+h3 {
+  background-image: radial-gradient(
+    circle at 50% 17.9167vh,
+    rgb(255, 213, 132) 0vh,
+    rgb(244, 76, 88) 50vh,
+    rgb(140, 40, 104) 90vh,
+    rgba(32, 31, 66, 0) 136.69vh
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+section {
+  height: 100vh;
+}
